--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "gatsby": "^4.9.2",
     "gatsby-plugin-image": "^2.9.1",
+    "gatsby-plugin-remove-generator": "^1.2.0",
     "gatsby-plugin-sharp": "^4.9.1",
     "gatsby-source-filesystem": "^4.9.1",
     "gatsby-source-wordpress": "^6.9.1",
